Updated the login button
Changed a few words. Nothing big.

--- a/app/src/components/login.html
+++ b/app/src/components/login.html
@@ -74,7 +74,7 @@ span.psw {
   background-color: #fefefe;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button (x) */
@@ -137,7 +137,7 @@ span.psw {
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
 
-      <label for="psw"><b>SCU ID</b></label>
+      <label for="psw"><b>SCU Email</b></label>
       <input type="password" placeholder="Enter SCU ID" name="psw" required>
         
       <button type="submit">Login</button>
